--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,20 +2,28 @@
 server.port=8888
 
 #Database connection
-spring.datasource.url=jdbc:h2:mem:practice_db
-spring.datasource.username=sa
+#spring.datasource.name=postgresql
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=180694
+#spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/empty_project?serverTimezone=UTC
+spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
+
+spring.jackson.serialization.wrap-root-value=true
 
 #Hibernate configuration
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 
 #Tracing SQL-statements
-#spring.jpa.hibernate.show_sql=true
-#spring.jpa.hibernate.format_sql=true
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.format_sql=true
 #spring.jpa.hibernate.use_sql_comments=true
 #
 #logging.level.org.hibernate=DEBUG
